radix-transactions/tests/assets/manifest_generator_error_invalid_blob_hash_2.diag
error: invalid blob hash 'aabbcc' - invalid hash length 3, expected 32
   |
12 | PUBLISH_PACKAGE_ADVANCED
13 |     Enum<AccessRule::AllowAll>()
14 |     Tuple(
15 |         Map<String, Tuple>()
16 |     )
17 |     Blob("aabbcc")
   |          ^^^^^^^^ invalid blob hash
18 |     Map<String, Tuple>()
19 |     Some(AddressReservation("my_reservation"))
20 | ;
21 | CALL_FUNCTION
22 |     NamedAddress("my_package")
   |